@@ -87,12 +87,15 @@ void drawPossibleArea(QPainter& thePainter, Road* R, const Projection& theProjec
 	bool Draw = true;
 	QString LandUse = R->tagValue("landuse","");
 	QString Leisure = R->tagValue("leisure","");
+	QString Natural = R->tagValue("natural","");
 	if (LandUse == "reservoir")
 		thePainter.setBrush(QBrush(QColor(0x22,0x22,0xcc,128),Qt::BDiagPattern));
 	else if ( (LandUse == "forest") || (Leisure == "park") )
 		thePainter.setBrush(QBrush(QColor(0x22,0xcc,0x22,128),Qt::BDiagPattern));
 	else if (Leisure == "pitch")
 		thePainter.setBrush(QBrush(QColor(0xcc,0x22,0x22,128),Qt::BDiagPattern));
+	else if (Natural == "wood")
+		thePainter.setBrush(QBrush(QColor(0x22,0x99,0x22,128),Qt::BDiagPattern));
 	else
 		Draw = false;
 
