@@ -1,5 +1,6 @@
 v0.09
 	* ADD : support for Noni GPSPlot tracks
+	* ADD : draw natural=wood areas (by Raphael Studer)
 
 v0.08
 	* FIX : work with 0.5 API
